language/move-lang/tests/move_check/parser/function_type_missing_angle.move
module M {
    // Test a missing ">" after the type parameters.
    fn<T1, T2 () { }
}
